# cj-hours-parser

./: .gitignore  COPYING.md  Cargo.toml  Makefile  README.md
sbin/: create-sources  speed-in-perl
src/: item.rs  main.rs
src/item/: char_util.rs  colstr.rs  str_util.rs  string_util.rs  tz.rs
test/: err0.err  err0.out  err0.txt  err00.err  err00.out  err01.err  err01.out  err01.txt  err02.err  err02.out  err03.err  err03.out  err03.txt  err04.err  err04.out  err04.txt  err04b.err  err04b.txt  err04c.err  err04c.txt  err04d.err  err04d.txt  err05.err  err06.err  err07.err  err07.txt  err08.err  err08.out  err09.err  err1.err  err1.out  err10.err  err10.txt  err11.err  err11.txt  err12.err  err12.txt  err13.err  err13.txt  err14.err  (+36 more)
