[package]
name = "cj-hours-parser"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0.37"
log = "0.4.8"
env_logger = "0.8.4"
chrono = "^0.4"
# kstring = "2.0.0" doesn't compile with rustc 1.48.0
kstring = "1.0.6"
